# cpp-learning-opengl

./: CMakeLists.txt  README.md  main  setup.sh
res/shader/: basic.shader
src/: main.cpp  shader.cpp
